--- a/common/build.gradle
+++ b/common/build.gradle
@@ -32,11 +32,8 @@ dependencies {
      */
 
     implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 
