--- a/console/front/package.json
+++ b/console/front/package.json
@@ -28,11 +28,13 @@
     "@vue/cli-plugin-babel": "~4.5.7",
     "@vue/cli-plugin-eslint": "~4.5.7",
     "@vue/cli-service": "~4.5.7",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-plugin-vue": "^7.0.1",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
+    "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
