--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,15 +33,25 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter'
 
+
+    /***
+     * Persistence
+     */
+//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
+
+
     implementation 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 
     /***
      * test
      */
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
 }
 
