--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,28 +1,3 @@
-/*
-plugins {
-	id 'org.springframework.boot' version '2.7.3'
-	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
-	id 'java'
-}
-
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
-
-repositories {
-	mavenCentral()
-}
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
-}
-*/
-
 bootJar { enabled = false }
 jar { enabled = true }
 
@@ -30,28 +5,17 @@ dependencies {
     /***
      * spring package
      */
-
     implementation 'org.springframework.boot:spring-boot-starter'
-
 
     /***
      * Persistence
      */
-//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
 
 
-    implementation 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-
-
-    /***
-     * test
-     */
-//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'org.apache.commons:commons-lang3:3.9'
 
 }
 
