--- a/console/build.gradle
+++ b/console/build.gradle
@@ -1,27 +1,4 @@
-/*
-plugins {
-	id 'org.springframework.boot' version '2.7.3'
-	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
-	id 'java'
-}
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
-
-repositories {
-	mavenCentral()
-}
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
-}
-*/
 bootJar { enabled = true }
 jar { enabled = true }
 
@@ -36,22 +13,12 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-web'
     // log4j 의존성문제로 web에서 기본적으로 사용되는 logging 모듈을 exclude시켜야한다.
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
     implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'junit:junit:4.13.1'
-//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-
-//    implementation 'org.projectlombok:lombok:1.18.24'
-//    annotationProcessor 'org.projectlombok:lombok:1.18.24'
-//    testImplementation 'org.projectlombok:lombok:1.18.24'
     /***
      * Test
      */
     implementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-//        exclude group: 'junit', module: 'junit'
-//    }
-//    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.springframework.security:spring-security-test'
 
 
     /***
@@ -61,5 +28,6 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.30'
     testImplementation 'ch.qos.logback:logback-classic:1.2.6'
 
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 
 }
