working login feature

--- a/console/src/main/resources/application.yml
+++ b/console/src/main/resources/application.yml
@@ -30,6 +30,10 @@ spring:
     hibernate:
       ddl-auto: update
 
+server:
+  port: 8100
+  shutdown: graceful
+
 #    properties:
 #      hibernate:
 #        format_sql: true
