feat: add confirmation feature + test case

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
     implementation 'org.modelmapper:modelmapper:2.3.9'
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
 }
 
