--- a/console/build.gradle
+++ b/console/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.30'
     testImplementation 'ch.qos.logback:logback-classic:1.2.6'
 
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5', 'io.jsonwebtoken:jjwt-jackson:0.11.5' // dependencies error
 
 }
