--- a/console/front/package.json
+++ b/console/front/package.json
@@ -15,6 +15,7 @@
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
     "vue": "^2.6.12",
+    "vue-agile": "^2.0.0",
     "vue-apexcharts": "^1.6.1",
     "vue-cookies": "^1.8.1",
     "vue-router": "^3.5.1",
@@ -23,9 +24,11 @@
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuetify": "^2.4.9",
     "vuetrend": "^0.3.4",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^7.0.96",
     "@vue/cli-plugin-babel": "~4.5.7",
     "@vue/cli-plugin-eslint": "~4.5.7",
     "@vue/cli-service": "~4.5.7",
