--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:2.3.9'
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+// https://mvnrepository.com/artifact/com.google.guava/guava
+    implementation 'com.google.guava:guava:31.1-jre'
+// https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
 
