--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
 // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.8.5'
+    // https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+
 
 }
 
