--- a/console/src/main/resources/application.yml
+++ b/console/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       on-profile: "local"
       # todo : should encapsulation
   datasource:
-    url: "jdbc:mariadb://localhost:3306/paper_route"
+    url: "jdbc:log4jdbc:mariadb://localhost:3306/paper_route"
     username: "pruser"
     password: "root1234"
 ---
@@ -42,7 +42,8 @@ spring:
     activate:
       on-profile: "common"
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
   jpa:
     open-in-view: false
     generate-ddl: true
@@ -64,3 +65,6 @@ server:
 #    org.hibernate:
 #      type.descriptor: trace
 #      SQL: DEBUG
+#  log4jdbc.spylogdelegator.name=net.sf.log4jdbc.log.slf4j.Slf4jSpyLogDelegator
+#  log4jdbc.dump.sql.maxlinelength
+
